--- a/AplikasiGithubUser/app/src/main/res/values/colors.xml
+++ b/AplikasiGithubUser/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green_github">#2EA44F</color>
+    <color name="green_light_github">#87C0A0</color>
+    <color name="black_github">#24282E</color>
+    <color name="blue_github">#353B44</color>
+    <color name="white_github">#F6F8FA</color>
 </resources>
