--- a/AplikasiGithubUser/app/src/main/res/values/colors.xml
+++ b/AplikasiGithubUser/app/src/main/res/values/colors.xml
@@ -12,4 +12,12 @@
     <color name="black_github">#24282E</color>
     <color name="blue_github">#353B44</color>
     <color name="white_github">#F6F8FA</color>
+    <color name="red">#F44336</color>
+
+
+    <color name="primary">#79E0EE</color>
+    <color name="primaryVariant">#98EECC</color>
+    <color name="onPrimary">#FBFFDC</color>
+    <color name="secondary">#98EECC</color>
+
 </resources>
